@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2020-01-21">
+<para>
+<link doc="en/download.xml">nginx-1.17.8</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2019-12-26">
 <para>
 <link url="https://unit.nginx.org/">unit-1.14.0</link>
