@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.17.8" />
 <item ver="1.17.7" />
 <item ver="1.17.6" />
 <item ver="1.17.5" />
